[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Effects/Effects.gd" type="Script" id=1]
[ext_resource path="res://Assets/Ship/hit_ship.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Enemy/hit_enemy.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Items/powerup.wav" type="AudioStream" id=4]

[node name="Effects" type="Node"]

script = ExtResource( 1 )

[node name="HitShip" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 2 )
volume_db = 5.0
autoplay = false
mix_target = 0
bus = "Effects"

[node name="HitEnemy" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Effects"

[node name="PowerUp" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 4 )
volume_db = -3.0
autoplay = false
mix_target = 0
bus = "Effects"


